# pico-sdk-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  install.sh  versions.env
lib/: common.sh
src/: FreeRTOSConfig.h  main.c  utils.h
